'view_icon_changed'

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -134,7 +134,7 @@
           <h2><i class="fas fa-folder-open"></i> {{ project.title }}</h2>
           <h5 class="tech-used"><i class="fas fa-code"></i> Tech Used: {{ project.tech }}</h5>
           <button class="expand-btn" (click)="openProject(project)">
-            <i class="fas fa-plus"></i>
+            <i class="fa-solid fa-eye"></i>
           </button>
         </div>
 
