--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,9 @@
           <div class="personal-photo-container">
             <!-- Left: Text -->
             <div class="personal-text">
-              <h2 class="slide-in-left"><i class="fas fa-hand-wave"></i> Hello, I'm</h2>
+              <div id="lottie-container" class="lottie-container"></div>
+
+              <h2 class="slide-in-left"><i class="fas fa-hand-wave"></i><b>I'm</b></h2>
               <p class="name-animation">Gokul Gopan</p>
               <p class="slide-in-right">
                 A results-driven Software Engineer specializing in full-stack development, 
